@@ -1,3 +1,15 @@
+2009-11-10  Chandrashekhar B <bchandra@secpod.com>
+
+	* openvassd/attack.c (attack_network): Use new
+	functions from pcap to get MAC address and check
+	whether target belongs to localnet.
+
+	* openvassd/attack.c (attack_network): Use new
+	functions from pcap to get MAC address and check
+	whether target belongs to localnet.
+
+	Coding by Srinivasa NL <nl.srinivas@gmail.com>.
+
 2009-11-10  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
 	* openvassd/utils.c (temp_file_name): Doc, added comment about toctou
